# tmp

Kronshtadt/: goo.py  start.sh
Kronshtadt/DroneDelivery/airDelivery/: backend_app.ini  manage.py  test.py
Kronshtadt/HubDelivery/HubServer/: drone_manager_app.ini  logs.txt  manage.py
Kronshtadt/hubs/: main.py  server.py  server.py.save  start_hubs.sh
Kronshtadt/router/: CMakeLists.txt  Dockerfile  graph.eps  hubs.txt  start_router.sh
Kronshtadt/router/server/: client.py  server.py  server.py.save
Kronshtadt/router/src/: CMakeLists.txt  Router.cpp  Router.h  main.cpp  router.drawio
Kronshtadt/router/src/balancer/: ABalancer.cpp  ABalancer.h  GreedyBalancer.cpp  GreedyBalancer.h  PrimitiveBalancer.cpp  PrimitiveBalancer.h  Scheduler.cpp  Scheduler.h
Kronshtadt/router/src/balancer/model/: AModel.cpp  AModel.h  DistanceModel.cpp  DistanceModel.h  PriceModel.cpp  PriceModel.h  TimeModel.cpp  TimeModel.h
Kronshtadt/router/src/balancer/model/hub/: Hub.cpp  Hub.h
Kronshtadt/router/src/balancer/model/product/: Product.cpp  Product.h
Kronshtadt/router/src/balancer/model/uav/: UAV.cpp  UAV.h
front/: index.html
front/css/: app.df26a4e8.css  chunk-vendors.6df64d91.css
front/js/: app.8cf55435.js  app.8cf55435.js.map  chunk-vendors.7c289a86.js
orderManager/: go.mod  go.sum
orderManager/cmd/: main.go
orderManager/configs/: config.yml  validated_hubs.txt
orderManager/internal/config/: config.go
orderManager/internal/domain/: domain.go
orderManager/internal/handler/: handler.go  list.go
orderManager/schema/: 000001_init.down.sql  000001_init.up.sql
(+42 files in other folders)
